--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
                 </section>
                 <aside class="col-1"></aside>
             </div>
+            <div class="container">
+                <aside class="col-1-1"></aside>
+                <aside class="col-2-1"></aside>
+                <aside class="col-1-1"></aside>
+                <aside class="col-1-1"></aside>
+                <aside class="col-1-1"></aside>
+            </div>
         </main>
         <footer>
             <div class="container">
