--- a/index.html
+++ b/index.html
@@ -33,19 +33,20 @@
                 <aside class="col-2">
                     <h1><b>OUR STRONG ORGANAISATION</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <a href="#">Contact Us</a>
                 </aside>
                 <section class="col-2">
                     <img src="/afanasyev_official/images/block-video.png">
                 </section>
                 <aside class="col-1"></aside>
             </div>
-            <div class="container">
+            <!--<div class="container">
                 <aside class="col-1-1"></aside>
                 <aside class="col-2-1"></aside>
                 <aside class="col-1-1"></aside>
                 <aside class="col-1-1"></aside>
                 <aside class="col-1-1"></aside>
-            </div>
+            </div>-->
         </main>
         <footer>
             <div class="container">
