--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 </section>
                 <aside class="col-1"></aside>
             </div>
-            <!--<div class="container">
+            <div class="container2">
                 <aside class="col-1-1"></aside>
                 <aside class="col-2-1"></aside>
                 <aside class="col-1-1"></aside>
                 <aside class="col-1-1"></aside>
                 <aside class="col-1-1"></aside>
-            </div>-->
+            </div>
         </main>
         <footer>
             <div class="container">
