--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <header>
             <div class="container">
+                <div class="col-1"></div>
                 <div class="col-5">
                     <nav>
                         <ul class="row">
@@ -20,7 +21,8 @@
                             <li><a href="#">CONTACT</a></li>
                         </ul>
                     </nav>
-                </div>
+                    </div>
+                <div class="col-1"></div>
             </div>
         </header>
         <main>
@@ -30,13 +32,22 @@
                     <h1><b>OUR STRONG ORGANAISATION</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                     <a href="#">Contact Us</a>
-                    <h1 class="text"><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
                 </aside>
                 <section class="col-2">
                     <img src="/afanasyev_official/images/block-video.png">
-
                 </section>
                 <aside class="col-1"></aside>
+            </div>
+        </main>
+        <main class="mainone">
+            <div class="container">
+                <div class="col-1"></div>
+                <div class="col-2">
+                    <h1 class="text"><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
             </div>
         </main>
         <footer>
