--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         </main>
         <main class="mainone">
             <div class="container">
-                <div class="col-1"></div>
-                <div class="col-2">
+                <div class="col-1-1"></div>
+                <div class="col-2-1">
                     <h1 class="text"><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
                 </div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
+                <div class="col-1-1"></div>
+                <div class="col-1-1"></div>
+                <div class="col-1-1"></div>
             </div>
         </main>
         <footer>
