--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-1"></div>
             </div>
         </header>
-        <main>
+        <main class="maintop">
             <div class="container">
                 <aside class="col-1"></aside>
                 <aside class="col-2">
