--- a/index.html
+++ b/index.html
@@ -43,10 +43,20 @@
             <div class="container">
                 <div class="col-1-1"></div>
                 <div class="col-2-1">
-                    <h1 class="text"><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
+                    <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                 </div>
-                <div class="col-1-1"></div>
-                <div class="col-1-1"></div>
+                <div class="col-1-1">
+                    <img src="/afanasyev_official/images/icon-settings.png">
+                    <h4>Management</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <img src="/afanasyev_official/images/icon-diamond.png">
+                    <h4>Management</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                </div>
+                <div class="col-1-1">
+
+                </div>
                 <div class="col-1-1"></div>
             </div>
         </main>
