--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
                     <h4>Management</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                     <img src="/afanasyev_official/images/icon-diamond.png">
-                    <h4>Management</h4>
+                    <h4>Logo / Branding</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                 </div>
                 <div class="col-1-1">
-
+                    <img src="/afanasyev_official/images/icon-pencil.png">
+                    <h4>UI / UX Design</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <img src="/afanasyev_official/images/icon-truck.png">
                 </div>
                 <div class="col-1-1"></div>
             </div>
