--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                     <img src="/afanasyev_official/images/icon-truck.png">
                     <h4>Animation</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <div style="width:500px; border-bottom: dotted 2px grey; padding-left:10px">
+                    </div>
                 </div>
                 <div class="col-1-1"></div>
             </div>
