--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 <div class="col-2-1">
                     <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <div class="line" style="border-bottom: solid 1px grey;"></div>
                 </div>
                 <div class="col-1-1">
                     <img src="/afanasyev_official/images/icon-settings.png">
@@ -54,7 +53,6 @@
                     <img src="/afanasyev_official/images/icon-diamond.png">
                     <h4>Logo / Branding</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <div class="line" style="border-bottom: solid 1px grey;"></div>
                 </div>
                 <div class="col-1-1">
                     <img src="/afanasyev_official/images/icon-pencil.png">
@@ -63,11 +61,13 @@
                     <img src="/afanasyev_official/images/icon-truck.png">
                     <h4>Animation</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <div class="line" style="border-bottom: solid 1px grey;"></div>
                 </div>
                 <div class="col-1-1">
                 </div>
             </div>
+        </main>
+        <main class="line">
+
         </main>
         <footer>
             <div class="container">
