--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             </div>
         </main>
         <main class="line">
-
+            <div class="col-1-1"></div>
+            <div class="col-5"></div>
+            <div class="col-1-1"></div>
         </main>
         <footer>
             <div class="container">
