--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
     <body>
         <header>
             <div class="container">
-                <div class="col-1"></div>
-                <div class="col-5">
-                    <nav>
-                        <ul class="row">
-                            <li><a href="#">HOME</a></li>
-                            <li><a href="#">PORTFOLIO</a></li>
-                            <li><a href="#">ABOUT US</a></li>
-                            <li><a href="#">CONTACT</a></li>
-                        </ul>
-                    </nav>
-                    </div>
-                <div class="col-1"></div>
+                <nav>
+                    <ul class="row">
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
         <main class="maintop">
@@ -37,39 +33,30 @@
                     <img src="/afanasyev_official/images/block-video.png">
                 </section>
                 <aside class="col-1"></aside>
+                <section class="2">
+                    <div class="col-1-1"></div>
+                    <div class="col-2-1">
+                        <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    </div>
+                    <div class="col-1-1">
+                        <img src="/afanasyev_official/images/icon-settings.png">
+                        <h4>Management</h4>
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                        <img src="/afanasyev_official/images/icon-diamond.png">
+                        <h4>Logo / Branding</h4>
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    </div>
+                    <div class="col-1-1">
+                        <img src="/afanasyev_official/images/icon-pencil.png">
+                        <h4>UI / UX Design</h4>
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                        <img src="/afanasyev_official/images/icon-truck.png">
+                        <h4>Animation</h4>
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    </div>
+                </section>
             </div>
-        </main>
-        <main class="mainone">
-            <div class="container">
-                <div class="col-1-1"></div>
-                <div class="col-2-1">
-                    <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </div>
-                <div class="col-1-1">
-                    <img src="/afanasyev_official/images/icon-settings.png">
-                    <h4>Management</h4>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <img src="/afanasyev_official/images/icon-diamond.png">
-                    <h4>Logo / Branding</h4>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </div>
-                <div class="col-1-1">
-                    <img src="/afanasyev_official/images/icon-pencil.png">
-                    <h4>UI / UX Design</h4>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <img src="/afanasyev_official/images/icon-truck.png">
-                    <h4>Animation</h4>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </div>
-                <div class="col-1-1">
-                </div>
-            </div>
-        </main>
-        <main class="line">
-            <div class="col-1-1"></div>
-            <div class="col-4"></div>
-            <div class="col-1-1"></div>
         </main>
         <footer>
             <div class="container">
