--- a/index.html
+++ b/index.html
@@ -34,27 +34,28 @@
                 </section>
                 <aside class="col-1"></aside>
                 <section class="2">
-                    <div class="col-1-1"></div>
-                    <div class="col-2-1">
+                    <aside class="col-1-1"></aside>
+                    <aside class="col-2-1">
                         <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
                         <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    </div>
-                    <div class="col-1-1">
+                    </aside>
+                    <aside class="col-1-1">
                         <img src="/afanasyev_official/images/icon-settings.png">
                         <h4>Management</h4>
                         <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                         <img src="/afanasyev_official/images/icon-diamond.png">
                         <h4>Logo / Branding</h4>
                         <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    </div>
-                    <div class="col-1-1">
+                    </aside>
+                    <aside class="col-1-1">
                         <img src="/afanasyev_official/images/icon-pencil.png">
                         <h4>UI / UX Design</h4>
                         <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                         <img src="/afanasyev_official/images/icon-truck.png">
                         <h4>Animation</h4>
                         <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    </div>
+                    </aside>
+                    <aside class="col-1-1"></aside>
                 </section>
             </div>
         </main>
