--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <aside class="col-1"></aside>
         </section>
         <section class="two">
-            <aside class="col-1-1"></aside>
-            <aside class="col-2-1">
+            <aside class="col-1"></aside>
+            <aside class="col-2">
                 <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
             </aside>
-            <aside class="col-1-1">
+            <aside class="col-1">
                 <img src="/afanasyev_official/images/icon-settings.png">
                 <h4>Management</h4>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
@@ -47,7 +47,7 @@
                 <h4>Logo / Branding</h4>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
             </aside>
-            <aside class="col-1-1">
+            <aside class="col-1">
                 <img src="/afanasyev_official/images/icon-pencil.png">
                 <h4>UI / UX Design</h4>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
@@ -55,7 +55,7 @@
                 <h4>Animation</h4>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
             </aside>
-            <aside class="col-1-1"></aside>
+            <aside class="col-1"></aside>
         </section>
         <footer>
             <div class="container">
