--- a/index.html
+++ b/index.html
@@ -22,40 +22,44 @@
             </div>
         </header>
         <section class="one">
-            <aside class="col-1"></aside>
-            <aside class="col-2">
-                <h1><b>OUR STRONG ORGANAISATION</b></h1>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                <a href="#">Contact Us</a>
-            </aside>
-            <section class="col-2">
-                <img src="/afanasyev_official/images/block-video.png">
-            </section>
-            <aside class="col-1"></aside>
+            <div class="container">
+                <div class="col-1"></div>
+                <div class="col-2">
+                    <h1><b>OUR STRONG ORGANAISATION</b></h1>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <a href="#">Contact Us</a>
+                </div>
+                <div class="col-2">
+                    <img src="/afanasyev_official/images/block-video.png">
+                </div>
+                <div class="col-1"></div>
+            </div>
         </section>
         <section class="two">
-            <aside class="col-1"></aside>
-            <aside class="col-2">
-                <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-            </aside>
-            <aside class="col-1">
-                <img src="/afanasyev_official/images/icon-settings.png">
-                <h4>Management</h4>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                <img src="/afanasyev_official/images/icon-diamond.png">
-                <h4>Logo / Branding</h4>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-            </aside>
-            <aside class="col-1">
-                <img src="/afanasyev_official/images/icon-pencil.png">
-                <h4>UI / UX Design</h4>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                <img src="/afanasyev_official/images/icon-truck.png">
-                <h4>Animation</h4>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-            </aside>
-            <aside class="col-1"></aside>
+            <div class="container">
+                <div class="col-1"></div>
+                <div class="col-2">
+                    <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                </div>
+                <div class="col-1">
+                    <img src="/afanasyev_official/images/icon-settings.png">
+                    <h4>Management</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <img src="/afanasyev_official/images/icon-diamond.png">
+                    <h4>Logo / Branding</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                </div>
+                <div class="col-1">
+                    <img src="/afanasyev_official/images/icon-pencil.png">
+                    <h4>UI / UX Design</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <img src="/afanasyev_official/images/icon-truck.png">
+                    <h4>Animation</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                </div>
+                <div class="col-1"></div>
+            </div>
         </section>
         <footer>
             <div class="container">
