--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
     <body>
         <header>
             <div class="container">
-                <nav>
-                    <ul class="row">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                    </ul>
-                </nav>
+                <div class="col-1"></div>
+                <div class="col-4">
+                    <nav>
+                        <ul class="row">
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">PORTFOLIO</a></li>
+                            <li><a href="#">ABOUT US</a></li>
+                            <li><a href="#">CONTACT</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-1"></div>
             </div>
         </header>
         <section class="one">
