--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="col-2">
                     <h1><b>OUR STRONG ORGANAISATION</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <a href="#">Contact Us</a>
+                    <a href="#" class="button">Contact Us</a>
                 </div>
                 <div class="col-2">
                     <img src="/afanasyev_official/images/block-video.png">
