--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
                 </div>
                 <div class="col-1"></div>
             </div>
+        <div class="three">
+
+        </div>
+        <div class="four">
+
+        </div>
+        <div class="five">
+
+        </div>
+        <div class="six">
+
+        </div>
         </section>
         <footer>
             <div class="container">
