--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="container">
-                <div class="col-1"></div>
+                <div class="col-1-1"></div>
                 <div class="col-4">
                     <nav>
                         <ul class="row">
@@ -22,7 +22,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1-1"></div>
             </div>
         </header>
         <section class="one">
