--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="col-1-1"></div>
-                <div class="col-4">
+                <div class="col-5-1">
                     <nav>
                         <ul class="row">
                             <li><a href="#">HOME</a></li>
