--- a/index.html
+++ b/index.html
@@ -64,19 +64,51 @@
                 </div>
                 <div class="col-1"></div>
             </div>
+        </section>
         <div class="three">
-
+            <div class="col-1"></div>
+            <div class="col-4">
+                <h1><b>FEATURE PRODUCTS</b></h1>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+            </div>
+            <div class="col-1"></div>
         </div>
         <div class="four">
-
+            <div class="col-1"></div>
+            <div class="col-4"></div>
+            <div class="col-1"></div>
         </div>
         <div class="five">
-
+            <div class="col-1"></div>
+            <div class="col-4">
+                <li><a href="#">ALL</a></li>
+                <li><a href="#">PRINT TEMPLATE</a></li>
+                <li><a href="#">WEB TEMPLATE</a></li>
+                <li><a href="#">USER INTERFACE</a></li>
+                <li><a href="#">MOCK-UP</a></li>
+            </div>
+            <div class="col-1"></div>
         </div>
         <div class="six">
-
+            <div class="col-1"></div>
+            <div class="col-1">
+                <img src="/afanasyev_official/images/block2.png">
+                <img src="/afanasyev_official/images/block2.png">
+            </div>
+            <div class="col-1">
+                <img src="/afanasyev_official/images/block2.png">
+                <img src="/afanasyev_official/images/block2.png">
+            </div>
+            <div class="col-1">
+                <img src="/afanasyev_official/images/block2.png">
+                <img src="/afanasyev_official/images/block2.png">
+            </div>
+            <div class="col-1">
+                <img src="/afanasyev_official/images/block2.png">
+                <img src="/afanasyev_official/images/block2.png">
+            </div>
+            <div class="col-1"></div>
         </div>
-        </section>
         <footer>
             <div class="container">
                 <div class="col-5">
